--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,13 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": [
+                "--model_path=.\\logs\\000\\model.h5",
+                "--anchors_path=.\\model_data\\yolo_anchors.txt",
+                "--classes_path=.\\model_data\\voc_classes.txt",
+                "--image"
+            ]
         },
         {
             "name": "Python: Remote Attach",
