--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.formatting.provider": "yapf",
+    "python.formatting.provider": "black",
     "python.pythonPath": "C:\\Users\\Andrea\\Anaconda3\\envs\\tfEnv\\python.exe"
 }
